--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.11",
     "@types/styled-components": "^5.1.4",
     "faker": "^5.1.0",
+    "parse-duration": "^0.4.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.0",
+    "redux": "^4.0.5",
     "styled-components": "^5.2.1",
     "styled-normalize": "^8.0.7",
     "typescript": "^4.0.3",
@@ -55,7 +59,12 @@
     "@storybook/node-logger": "^6.0.28",
     "@storybook/preset-create-react-app": "^3.1.4",
     "@storybook/react": "^6.0.28",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
     "babel-loader": "^8.1.0",
-    "react-is": "^17.0.1"
+    "eslint": "^7.13.0",
+    "eslint-plugin-react": "^7.21.5",
+    "react-is": "^17.0.1",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
