--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "clone-animate.css",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tkddn204.github.io/clone-animate.css",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -31,7 +32,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public --no-dll",
-    "build-storybook": "build-storybook -s public --no-dll"
+    "build-storybook": "build-storybook -s public --no-dll",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +54,11 @@
       "last 1 safari version"
     ]
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@storybook/addon-actions": "^6.0.28",
@@ -64,6 +72,10 @@
     "babel-loader": "^8.1.0",
     "eslint": "^7.13.0",
     "eslint-plugin-react": "^7.21.5",
+    "gh-pages": "^3.1.0",
+    "husky": "^4.3.0",
+    "prettier": "^2.1.2",
+    "pretty-quick": "^3.1.0",
     "react-is": "^17.0.1",
     "redux-devtools-extension": "^2.13.8"
   }
